--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,5 +11,6 @@ ext.versions = [
         butterKnife : '8.8.1',
         dagger      : '2.12',
         rxjava      : '2.1.9',
-        rxandroid   : '2.0.2'
+        rxandroid   : '2.0.2',
+        firebase    : '17.1.0'
 ]
